# Hospital_Management_Project

./: .gitignore  CMakeLists.txt  README.md  demo_pagination.cpp  readme.md  reset_data.sh  run_with_sample_data.sh  setup.sh  test_doctors_2.txt
.devcontainer/: Dockerfile  devcontainer.json
data/: Account.txt  Appointment.txt  Department.txt  Doctor.txt  Medicine.txt  Patient.txt  Prescription.txt  README.md
data/backup/: .gitkeep  test_doctors_backup_20251222_023007.txt  test_doctors_backup_20251222_023008.txt
data/reports/: README.md  bao_cao_doanh_thu_2025-01-01_2025-12-31.txt  bao_cao_ngay_2025-05-01.txt  bao_cao_thang_2024_9.txt  bao_cao_tuan_2024-02-20.txt  bao_cao_tuan_2025-05-01.txt
data/sample/: Account_sample.txt  Appointment_sample.txt  Department_sample.txt  Doctor_sample.txt  Medicine_sample.txt  Patient_sample.txt  Prescription_sample.txt
docs/: ARCHITECTURE.md  ARCHITECTURE_E.md  ARCHITECTURE_VI.md  BUILD.md  BUILD_Vi.md  BUILD_vi.md  CLASS_DIAGRAM.md  GitCommand.md  implementation_plan.md  task.md
docs/diagrams/: architecture-detailed.md  architecture-overview.md
include/: Doctor.h
include/advance/: Department.h  Medicine.h  Prescription.h  ReportGenerator.h
include/bll/: AdminService.h  AppointmentService.h  AuthService.h  DepartmentService.h  DoctorService.h  MedicineService.h  PatientService.h  PrescriptionService.h
include/common/: Constants.h  Types.h  Utils.h
include/dal/: AccountRepository.h  AppointmentRepository.h  DepartmentRepository.h  DoctorRepository.h  FileHelper.h  IRepository.h  MedicineRepository.h  PatientRepository.h  PrescriptionRepository.h
include/future/: Department.h  Medicine.h  Prescription.h
include/model/: Account.h  Admin.h  Appointment.h  Doctor.h  Patient.h  Person.h  Statistics.h
include/ui/: ConsoleUI.h  DisplayHelper.h  HMSFacade.h  InputValidator.h
src/: Doctor.cpp  main.cpp
src/bll/: AdminService.cpp  AppointmentService.cpp  AuthService.cpp  DepartmentService.cpp  DoctorService.cpp  MedicineService.cpp  PatientService.cpp  PrecriptionService.cpp  PrescriptionService.cpp  ReportGenerator.cpp
src/common/: Utils.cpp
src/dal/: AccountRepository.cpp  AppointmentRepository.cpp  DepartmentRepository.cpp  DoctorRepository.cpp  FileHelper.cpp  MedicineRepository.cpp  PatientRepository.cpp  PrescriptionRepository.cpp
src/model/: Acount.cpp  Admin.cpp  Appointment.cpp  Department.cpp  Doctor.cpp  Medicine.cpp  Patient.cpp  Person.cpp  Prescription.cpp  Statistics.cpp
src/ui/: ConsoleUI.cpp  DisplayHelper.cpp  HMSFacade.cpp  InputValidator.cpp
test/: test_cpp23_full.cpp
test/bll/: AdminServiceTest.cpp  AppointmentServiceTest.cpp  AuthServiceTest.cpp  DepartmentServiceTest.cpp  DoctorServiceTest.cpp  MedicineServiceTest.cpp  MedicineServiceTest1.cpp  PatientServiceTest.cpp  PrescriptionServiceTest.cpp  ReportGeneratorTest.cpp
test/dal/: AccountRepositoryTest.cpp  AppointmentRepositoryTest.cpp  AppointmentRepository_file_test.cpp  DepartmentRepositoryTest.cpp  DoctorRepositoryTest.cpp  FileHelperTest.cpp  MedicineRepositoryTest.cpp  PatientRepositoryTest.cpp  PrescriptionRepositoryTest.cpp
test/fixtures/: AccountTest.txt  Account_test.txt  AppointmentTest.txt  Appointment_test.txt  Department_test.txt  Doctor_test.txt  Medicine_test.txt  PatientTest.txt  Patient_test.txt  Prescription_test.txt
test/model/: .gitkeep  AccountTest.cpp  AdminTest.cpp  AppointmentTest.cpp  Appointment_test.cpp  DepartmentTest.cpp  DoctorTest.cpp  MedicineTest.cpp  PatientTest.cpp  PrescriptionTest.cpp  StatisticsTest.cpp
